fixed row item alignment

--- a/lesscss/combatants.less
+++ b/lesscss/combatants.less
@@ -20,7 +20,7 @@
     padding: @medium-spacer;
     border-left-width: @medium-spacer;
     border-left-style: solid;
-    align-items: baseline;
+    align-items: center;
 
     .fa-clickable:hover {
         color: @hover-green;
@@ -84,8 +84,6 @@
 }
 
 .combatant__hp {
-
-    align-self: stretch;
     padding-top: 4px;
 
     width: 70px;
